--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,25 @@ services:
     - docker
 
 # Build test stage image, then run test suites
-# before_install:
+before_install:
+    - docker build --rm=true -t shari666/rudp-test -f Dockerfile.dev .
 
 # Test stage
 script:
-    - echo pwd
+    - docker run -it shari666/rudp-test
 
-after_script:
+after_success:
     - docker build --rm=true -t shari666/rudp .
     # Log in to the docker CLI
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     # Push image to the docker hub
     - docker push shari666/rudp
+
+# deploy:
+#     provider: elasticbeanstalk
+#     region: us-west-1
+#     on:
+#         branch: master
+#     access_key_id: $AWS_ACCESS_KEY
+#     secret_access_key:
+#         secure: $AWS_SECRET_KEY
